syntax = "proto3";
package Protocol;

message BuffData
{
	int64 buffId = 1;
	float remainTime = 2;
	repeated uint64 victims = 3;
}

message C_TEST
{
	uint64 id = 1;
}

message C_MOVE
{
	uint64 id = 1;
	uint32 xPos = 2;
}

message S_TEST
{
	uint64 id = 1;
	uint32 hp = 2;
	uint32 attack = 3;
	repeated BuffData buffs = 4;
}